<?xml version="1.0" encoding="utf-8"?>

<resources>

    <!-- nCOREist Application -->
    <string name="app_name">nCOREist</string>

    <!-- NCoreSession -->
    <string name="shared_pref_login_name">login_name</string>
    <string name="shared_pref_login_password">login_password</string>
    <string name="shared_pref_remember_credentials">remember_credentials</string>

    <!-- Start Activity -->
    <string name="start_activity_label">nCOREist</string>
    <string name="start_logo_text">nCOREist</string>
    <string name="start_progress_text">Betöltés...</string>

    <!-- Login Activity -->
    <string name="login_activity_label">nCOREist</string>
    <string name="login_activity_title">Bejelentkezés</string>
    <string name="login_name_text">Felhasználónév</string>
    <string name="login_password_text">Jelszó</string>
    <string name="captcha_text">reCAPTCHA</string>
    <string name="remember_login_text">Emlékezz rám</string>
    <string name="login_text">Bejelentkezés</string>

    <!-- Categories Activity -->
    <string name="categories_activity_label">nCOREist</string>
    <string name="categories_action_search">Search</string>

    <!-- Search Results Activity -->
    <string name="search_results_activity_label">Keresés</string>

    <!-- Torrent Details Activity -->
    <string name="torrent_details_activity_label">nCOREist</string>
    <string name="torrent_details_action_download">Download</string>
    <string name="torrent_details_name_text">Név:</string>
    <string name="torrent_details_type_text">Típus:</string>
    <string name="torrent_details_uploaded_text">Feltöltve:</string>
    <string name="torrent_details_uploader_text">Feltöltő:</string>
    <string name="torrent_details_seeders_text">Seederek:</string>
    <string name="torrent_details_leechers_text">Leecherek:</string>
    <string name="torrent_details_downloaded_text">Letöltve:</string>
    <string name="torrent_details_speed_text">Sebesség:</string>
    <string name="torrent_details_size_text">Méret:</string>
    <string name="torrent_details_files_text">Fájlok:</string>
    <string name="torrent_details_title_text">Cím:</string>
    <string name="torrent_details_release_date_text">Megjenelés éve:</string>
    <string name="torrent_details_director_text">Rendező:</string>
    <string name="torrent_details_cast_text">Szereplők:</string>
    <string name="torrent_details_country_text">Ország:</string>
    <string name="torrent_details_duration_text">Hossz:</string>
    <string name="torrent_details_labels_text">Címkék:</string>
    <string name="torrent_details_imdb_text">IMDB értékelés:</string>
    <string name="other_versions_text">Más verziók:</string>

    <!-- SlideShow Activty -->
    <string name="slideshow_activity_label">nCOREist</string>

    <!-- Torrent List Fragment -->
    <string name="torrent_list_action_refresh">Frissítés</string>
    <string name="torrent_list_more_label">Tovább</string>
    <string name="torrent_list_empty_label">Nincs találat</string>

    <!-- Navigation Drawer -->
    <string name="drawer_open">Navigation drawer open</string>
    <string name="drawer_close">Navigation drawer close</string>
    <string name="drawer_info_later">Később...</string>

</resources>
