<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp"
              android:gravity="center">

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/login_name_value"
              android:hint="@string/login_name_text"
              android:drawableLeft="@drawable/ic_person"
              android:singleLine="true"/>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

        <ImageButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/show_password_button"
                     android:src="@drawable/ic_not_secure_light"
                     android:layout_alignParentRight="true"
                     android:onClick="onShowPassword"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/login_password_value"
                  android:hint="@string/login_password_text"
                  android:drawableLeft="@drawable/ic_secure"
                  android:password="true"
                  android:singleLine="true"
                  android:layout_toLeftOf="@id/show_password_button"/>

    </RelativeLayout>

    <CheckBox android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/remember_login_checkbox"
              android:text="@string/remember_login_text"
              android:textAppearance="?android:attr/textAppearanceSmall"
              android:layout_marginLeft="8dp"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:text="@string/login_text"
            android:onClick="onLogin"/>

</LinearLayout>
