<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:id="@+id/torrent_details_drawer_layout">

    <!-- The main content view -->
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:background="@color/torrent_list_item_bg_even">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/torrent_details_main_title_value"
                      android:layout_gravity="center_horizontal"
                      android:gravity="center_horizontal"
                      android:layout_margin="4dp"
                      android:padding="4dp"
                      android:background="@drawable/torrent_list_item_odd_selector"
                      android:textColor="@color/torrent_list_item_text1"
                      android:textStyle="bold"
                      android:textAppearance="?android:attr/textAppearanceMedium"/>

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/torrent_details_images_layout"
                            android:gravity="center"
                            android:layout_margin="4dp"
                            android:padding="4dp"
                            android:background="@drawable/torrent_list_item_odd_selector"
                            android:clickable="true"
                            android:onClick="onImagesClick"
                            android:visibility="gone">

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/torrent_details_cover_image"
                           android:layout_centerVertical="true"
                           android:visibility="gone"
                           android:padding="8dp"
                           android:maxHeight="150dp"
                           android:maxWidth="150dp"/>

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/torrent_details_sample_image1"
                           android:visibility="gone"
                           android:padding="8dp"
                           android:layout_toRightOf="@id/torrent_details_cover_image"
                           android:maxHeight="75dp"
                           android:maxWidth="75dp"/>

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/torrent_details_sample_image2"
                           android:visibility="gone"
                           android:padding="8dp"
                           android:layout_toRightOf="@id/torrent_details_cover_image"
                           android:layout_below="@id/torrent_details_sample_image1"
                           android:maxHeight="75dp"
                           android:maxWidth="75dp"/>

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/torrent_details_sample_image3"
                           android:visibility="gone"
                           android:padding="8dp"
                           android:layout_toRightOf="@id/torrent_details_cover_image"
                           android:layout_below="@id/torrent_details_sample_image2"
                           android:maxHeight="75dp"
                           android:maxWidth="75dp"/>

            </RelativeLayout>

            <TableLayout android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/torrent_details_table"
                         android:layout_margin="4dp"
                         android:padding="4dp"
                         android:shrinkColumns="1"
                         android:background="@color/torrent_list_item_bg_odd">

                <TableRow>

                    <TextView android:id="@+id/torrent_details_name_text"
                              android:text="@string/torrent_details_name_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_name_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow>

                    <TextView android:id="@+id/torrent_details_type_text"
                              android:text="@string/torrent_details_type_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_type_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow>

                    <TextView android:id="@+id/torrent_details_uploaded_text"
                              android:text="@string/torrent_details_uploaded_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_uploaded_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow>

                    <TextView android:id="@+id/torrent_details_uploader_text"
                              android:text="@string/torrent_details_uploader_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_uploader_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow>

                    <TextView android:id="@+id/torrent_details_seeders_text"
                              android:text="@string/torrent_details_seeders_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_seeders_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow>

                    <TextView android:id="@+id/torrent_details_leechers_text"
                              android:text="@string/torrent_details_leechers_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_leechers_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow>

                    <TextView android:id="@+id/torrent_details_downloaded_text"
                              android:text="@string/torrent_details_downloaded_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_downloaded_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow>

                    <TextView android:id="@+id/torrent_details_speed_text"
                              android:text="@string/torrent_details_speed_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_speed_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow>

                    <TextView android:id="@+id/torrent_details_size_text"
                              android:text="@string/torrent_details_size_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_size_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow>

                    <TextView android:id="@+id/torrent_details_files_text"
                              android:text="@string/torrent_details_files_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_files_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

            </TableLayout>

            <TableLayout android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/torrent_details_movie_table"
                         android:layout_margin="4dp"
                         android:padding="4dp"
                         android:shrinkColumns="1"
                         android:background="@color/torrent_list_item_bg_odd"
                         android:visibility="gone">

                <TableRow android:id="@+id/torrent_details_title_row"
                          android:visibility="gone">

                    <TextView android:id="@+id/torrent_details_title_text"
                              android:text="@string/torrent_details_title_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_title_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow android:id="@+id/torrent_details_release_date_row"
                          android:visibility="gone">

                    <TextView android:id="@+id/torrent_details_release_date_text"
                              android:text="@string/torrent_details_release_date_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_release_date_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow android:id="@+id/torrent_details_director_row"
                          android:visibility="gone">

                    <TextView android:id="@+id/torrent_details_director_text"
                              android:text="@string/torrent_details_director_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_director_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow android:id="@+id/torrent_details_cast_row"
                          android:visibility="gone">

                    <TextView android:id="@+id/torrent_details_cast_text"
                              android:text="@string/torrent_details_cast_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_cast_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow android:id="@+id/torrent_details_country_row"
                          android:visibility="gone">

                    <TextView android:id="@+id/torrent_details_country_text"
                              android:text="@string/torrent_details_country_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_country_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow android:id="@+id/torrent_details_duration_row"
                          android:visibility="gone">

                    <TextView android:id="@+id/torrent_details_duration_text"
                              android:text="@string/torrent_details_duration_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_duration_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow android:id="@+id/torrent_details_labels_row"
                          android:visibility="gone">

                    <TextView android:id="@+id/torrent_details_labels_text"
                              android:text="@string/torrent_details_labels_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_labels_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

                <TableRow android:id="@+id/torrent_details_imdb_row"
                          android:visibility="gone">

                    <TextView android:id="@+id/torrent_details_imdb_text"
                              android:text="@string/torrent_details_imdb_text"
                              android:paddingRight="8dp"
                              android:textColor="@color/torrent_list_item_text1"
                              android:textStyle="bold"/>

                    <TextView android:id="@+id/torrent_details_imdb_value"
                              android:textColor="@color/torrent_list_item_text1"/>

                </TableRow>

            </TableLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:id="@+id/other_versions_layout"
                          android:layout_margin="4dp"
                          android:padding="4dp"
                          android:background="@color/torrent_list_item_bg_odd"
                          android:visibility="gone">

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/other_versions_text"
                          android:layout_gravity="center_horizontal"
                          android:gravity="center_horizontal"
                          android:layout_margin="4dp"
                          android:padding="4dp"
                          android:background="@drawable/torrent_list_item_odd_selector"
                          android:textColor="@color/torrent_list_item_text1"
                          android:textStyle="bold"
                          android:textAppearance="?android:attr/textAppearanceMedium"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- The navigation drawer -->
    <ListView android:layout_width="240dp"
              android:layout_height="match_parent"
              android:id="@+id/torrent_details_drawer"
              android:layout_gravity="start"
              android:choiceMode="singleChoice"
              android:divider="@android:color/transparent"
              android:dividerHeight="0dp"
              android:background="#111"/>

</android.support.v4.widget.DrawerLayout>
